# rexsgdata-rs

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs
tests/: data.rs
