[package]
name = "rexsgdata"
version = "0.1.4" # remember to update html_root_url
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["data-structures"]
description = "Scatter-Gather Data Descriptors"
documentation = "https://docs.rs/rexsgdata"
keywords = ["scatter", "gather", "iovec"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/imp/rexsgdata-rs.git"

[badges]
gitlab = { repository = "imp/rexsgdata-rs" }
maintenance = { status = "experimental" }

[dependencies]
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
bincode = "1.0"
serde_test = "1.0"

[features]
pedantic = []
